cmss/main/default/objects/IntegrationSettings__c/IntegrationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for integration (endpoints, usernames etc)</description>
    <label>Integration Settings</label>
</CustomObject>