cmss/main/default/objects/IntegrationSettings__c/fields/CasselBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>CasselBaseUrl__c</fullName>
    <label>Cassel Base URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>