cmss/main/default/objects/IntegrationSettings__c/fields/CertificateName__c.field-meta.xml
<CustomField>
    <fullName>CertificateName__c</fullName>
    <label>Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>