cmss/main/default/objects/IntegrationSettings__c/fields/ConsentServiceEndpoint__c.field-meta.xml
<CustomField>
    <fullName>ConsentServiceEndpoint__c</fullName>
    <description>Base of consent service URL, including protocol and port. Eg: https://ivdr.cmss.cz:443</description>
    <inlineHelpText>Base of consent service URL, including protocol and port. Eg: https://ivdr.cmss.cz:443</inlineHelpText>
    <label>Consent Service Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>