cmss/main/default/objects/IntegrationSettings__c/fields/ConsentServicePassword__c.field-meta.xml
<CustomField>
    <fullName>ConsentServicePassword__c</fullName>
    <label>Consent Service Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>