cmss/main/default/objects/IntegrationSettings__c/fields/ConsentServiceUsername__c.field-meta.xml
<CustomField>
    <fullName>ConsentServiceUsername__c</fullName>
    <label>Consent Service Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>