cmss/main/default/objects/IntegrationSettings__c/fields/EsbEndpoint__c.field-meta.xml
<CustomField>
    <fullName>EsbEndpoint__c</fullName>
    <description>Base of common service URL, including protocol and port. Eg: https://ivdr.cmss.cz:443</description>
    <inlineHelpText>Base of common service URL, including protocol and port. Eg: https://ivdr.cmss.cz:443</inlineHelpText>
    <label>Esb Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>