cmss/main/default/objects/IntegrationSettings__c/fields/EsbPassword__c.field-meta.xml
<CustomField>
    <fullName>EsbPassword__c</fullName>
    <label>Esb Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>