cmss/main/default/objects/IntegrationSettings__c/fields/EsbUsername__c.field-meta.xml
<CustomField>
    <fullName>EsbUsername__c</fullName>
    <label>Esb Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>