cmss/main/default/objects/IntegrationSettings__c/fields/MailServiceEndpoint__c.field-meta.xml
<CustomField>
    <fullName>MailServiceEndpoint__c</fullName>
    <label>Mail Service Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>