cmss/main/default/objects/IntegrationSettings__c/fields/MailServicePassword__c.field-meta.xml
<CustomField>
    <fullName>MailServicePassword__c</fullName>
    <label>Mail Service Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>