cmss/main/default/objects/IntegrationSettings__c/fields/MailServiceUsername__c.field-meta.xml
<CustomField>
    <fullName>MailServiceUsername__c</fullName>
    <label>Mail Service Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>