cmss/main/default/objects/IntegrationSettings__c/fields/NELBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>NELBaseUrl__c</fullName>
    <description>URL to NEL website</description>
    <label>NEL Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>