cmss/main/default/objects/IntegrationSettings__c/fields/PortfolioManagementServiceEndpoint__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManagementServiceEndpoint__c</fullName>
    <description>Base of portfolio management service URL, including protocol and port. Eg: https://ivdr.cmss.cz:443</description>
    <inlineHelpText>Base of portfolio management service URL, including protocol and port. Eg: https://ivdr.cmss.cz:443</inlineHelpText>
    <label>Portfolio Management Service Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>