cmss/main/default/objects/IntegrationSettings__c/fields/PortfolioManagementServicePassword__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManagementServicePassword__c</fullName>
    <label>Portfolio Management Service Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>