cmss/main/default/objects/IntegrationSettings__c/fields/PortfolioManagementServiceUsername__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManagementServiceUsername__c</fullName>
    <label>Portfolio Management Service Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>