cmss/main/default/objects/IntegrationSettings__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <description>Source system field for SOAP messages</description>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>