cmss/main/default/objects/IntegrationSettings__c/fields/TargetSystem__c.field-meta.xml
<CustomField>
    <fullName>TargetSystem__c</fullName>
    <description>Field for target system for SOAP messages</description>
    <label>Target System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>