cmss/main/default/objects/IntegrationSettings__c/fields/ZeusBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>ZeusBaseUrl__c</fullName>
    <label>ZEUS Base URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>